Closed
Bug 17013
Opened 26 years ago
Closed 26 years ago
[ptr] native nsIFoo [without trailing paren] crashes xpidl
Categories
(Core :: XPCOM, defect, P3)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
People
(Reporter: mike+mozilla, Assigned: shaver)
Details
(Keywords: crash)
Attachments
(1 file)
|
1.80 KB,
text/plain
|
Details |
Travis Bogard wrote:
So to help you out with the crash. I found the problem in the IDL that was
causing the crash. Changing the line that had the native ptr declaration...
[ptr] native nsIPresContext; should be
[ptr] native nsIPresContext(nsIPresContext);
Travis
| Reporter | ||
Comment 1•26 years ago
|
||
| Reporter | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
| Reporter | ||
Comment 2•26 years ago
|
||
So it turns out that libIDL parses [ptr] native nsIFoo; quite happily, but xpidl
gets null when it tries to access .user_type and crashes in fputs.
Shaver, maybe you can help me out with the history some... 'native' is special
to xpidl, correct? Is there any sense to libIDL accepting native nsIFoo;
without an associated (nsIUserType) ? If no, we should flag this as invalid
syntax in libIDL. I'll patch in something for now to catch it in xpidl.
Also, do you know if andrewtv has a buzilla login?
| Reporter | ||
Comment 3•26 years ago
|
||
Adding andrewtv, I hope.
| Reporter | ||
Comment 4•26 years ago
|
||
Yay! Got your bugzilla ID right.
Andrew, can you comment?
| Assignee | ||
Comment 5•26 years ago
|
||
|native| is from OMG IDL, where it's unparameterized. We should flag it as an
error, my bad that we don't already.
| Reporter | ||
Comment 6•26 years ago
|
||
Ah. Yep, found it. Bottom of page 3-14 in the Corba v2.3 IDL grammar. Looks
like adding a trailing (foo) is an xpidl innovation.
I wonder if
[ptr,id(nsIFoo)] native nsIFoo;
would have been a cleaner extension.
| Assignee | ||
Updated•26 years ago
|
Assignee: mccabe → shaver
Status: ASSIGNED → NEW
| Assignee | ||
Comment 7•26 years ago
|
||
Fix sent to mccabe for review.
(No, mccabe, that would have been ugly. =) )
| Reporter | ||
Updated•26 years ago
|
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•26 years ago
|
||
Fixed. Thanks, shaver.
You need to log in
before you can comment on or make changes to this bug.
Description
•